--- a/doc/analisis-introcuccion.tex
+++ b/doc/analisis-introcuccion.tex
@@ -1,3 +1,3 @@
-En este cap\'itulo nos sumergiremos en los dos campos de conocimiento que este proyecto contempla, la computación evolutiva y el procesamiento masivo de información. Ambos están adquiriendo cada vez m\'as importancia en el mundo de la computación y la resolución de problemas no convencionales.
+En este cap\'itulo nos sumergiremos en los dos campos de conocimiento que este proyecto contempla, la computación evolutiva y el procesamiento masivo de información. Ambos están adquiriendo cada vez m\'as importancia en el mundo de la computación y la resolución de problemas no convencionales, a los que en la teoría de la complejidad computacional se les conoce como problemas de tiempo polinomial no determinista, o también conocidos como NP. La importancia de esta clase de problemas de decisión es que contiene muchos problemas de búsqueda y de optimización para los que se desea saber si existe una cierta solución o si existe una mejor solución que las conocidas.
 
-Se cubrir\'an temas como porque surgen estás metodologías, sus propósitos y de que manera intentan resolver el problema para el cual han sido desarrolladas.
+Se cubrir\'an temas como porqu\'e surgen estás metodologías, sus propósitos y de que manera intentan resolver el problema para el cual han sido desarrolladas.
