--- a/doc/desarrollo-hadoop.tex
+++ b/doc/desarrollo-hadoop.tex
@@ -4,7 +4,7 @@ Hadoop es un proyecto de alto nivel Apache que está siendo construido y usado p
 
 \figuraSinMarco{0.8}{imagenes/procesos-hadoop}{Procesos en los diferentes nodos de un cluster Hadoop}{procesos-hadoop}{}
 
-Hadoop requiere tener instalados entre nodos en el clúster JRE 1.6 o superior, y SSH. Un clúster típico incluye un nodo maestro y múltiples nodos esclavo. El nodo maestro consiste en un proceso jobtracker (rastreador de trabajo), tasktracker (rastreador de tareas), namenode (nodo de nombres), y datanode (nodo de datos). Un esclavo o compute node (nodo de cómputo) consisten en un nodo de datos y un rastreador de tareas \ver{procesos-hadoop}. 
+Hadoop requiere tener instalados en los nodos del clúster la versi\'on 1.6 o superior del entorno de ejecuci\'on de Java (JRE) y SSH. Un clúster típico incluye un nodo maestro y múltiples nodos esclavos. El nodo maestro consiste en un proceso jobtracker (rastreador de trabajo), tasktracker (rastreador de tareas), namenode (nodo de nombres), y datanode (nodo de datos). Un esclavo o compute node (nodo de cómputo) consisten en un nodo de datos y un rastreador de tareas \ver{procesos-hadoop}. 
 
 Como se puede apreciar, Hadoop puede ser claramente dividido en dos partes, el sistema de ficheros, HDFS, y la parte que implementa la parte de procesamiento de información, la capa MapReduce.
 
